# TrajectoryGenerator

./: .gitignore  README.md  pyproject.toml
p3a_mapwize_pathgenerator/: api.py  data_explore.py  display.py  helper.py  mapwize.py  playground.py
p3a_mapwize_pathgenerator/data/: path.json  paths_4_floor.json  paths_4_floor_full.json  places.json
p3a_mapwize_pathgenerator/data/traces/: file.plt
tests/: test_integration.py
